apps/saleor-dashboard/overlays/dev/patches/ingress-patch.yaml
# Ingress Patch - Dashboard DEV
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:827913617839:certificate/95195666-9195-4cba-9d0a-acd768c1a1b6
    external-dns.alpha.kubernetes.io/hostname: dashboard-dev.kyeol.click
spec:
  rules:
    - host: dashboard-dev.kyeol.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dashboard
                port:
                  number: 80
    - host: dev-dashboard.kyeol.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dashboard
                port:
                  number: 80
